Add promo component to site layout and component library

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,10 @@
 <html>
   {% include head.html %}
   <body>
+	<div class="promo">
+		<p class="promo__text">We're having a fundraiser! We need 1000 people to donate $100!</p>
+		<a href="#" class="promo__cta">Help us meet our goal!</a>
+	</div>
   	{% include header.html %}
     {{ content }}
     {% include footer.html %}
