--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -23,8 +23,8 @@ $spacing-unit: 1em;
 $border-radius: .5em;
 
 // fonts //
-$font-default: "adobe-garamond-pro", serif;
-$font-alt: "Avenir", sans-serif;
+$font-default: Garamond Pro, "adobe-garamond-pro", Garamond, serif;
+$font-alt: Avenir, "Avenir", Helvetica, sans-serif;
 
 // breakpoints //
 $tablet: 600px;
