Updates and bug fixes from client feedback

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,15 @@
       <li class="link-list__item"><a href="{{site.baseurl}}/donate">Get Involved</a></li>
     </ul>
   </nav>
-  <img class="logo -gray" src="{{site.baseurl}}/assets/img/HOPE_logo-black.svg" alt="HOPE Leadership Academy Logo">
+  <div class="logo-group">
+    <img class="logo -gray" src="{{site.baseurl}}/assets/img/HOPE_logo-black.svg" alt="HOPE Leadership Academy Logo">
+  </div>
   <p class="sponsors">
-    H.O.P.E. Leadership Academy is a proud partner of Connect, a Leadership Huntsville/Madison County Program. Major sponsors of H.O.P.E. include Dr. Libby & Steve Parker.
+    H.O.P.E. Leadership Academy is a proud partner of Optimist Clubs of Huntsville and Connect, a Leadership Huntsville/Madison County Program.
+    <br>
+    <a href="https://docs.google.com/presentation/d/1ofPCDTosn0_jcB4fvNgAv6hjNzvExPOeXxlrnitGe2c/pub?start=false&loop=false&delayms=3000&slide=id.p" target="_blank">
+      View all Sponsors & Donors
+    </a>
   </p>
   <p class="copyright">Copyright H.O.P.E. Leadership Academy 2015</p>
 </footer>
