--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
 	<div class="promo">
-		<p class="promo__text">We're having a fundraiser! We need 1000 people to donate $100!</p>
+		<p class="promo__text">Be the ONE Campaign: ONE thousand people give ONE hundred dollars in ONE month. A little hope goes a long way.</p>
 		<a href="#" class="promo__cta">Help us meet our goal!</a>
 	</div>
   	{% include header.html %}
