Update media controls rule to hide play button on iOS

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -351,8 +351,9 @@ Components
 
 		& > video{
 			max-width: 100%;
-			&::-webkit-media-controls {
-			    display: none !important;
+			
+			&::-webkit-media-controls-start-playback-button {
+			  display: none !important;
 			}
 		}
 	}
