--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -351,9 +351,9 @@ Components
 
 		& > video{
 			max-width: 100%;
-			
+
 			&::-webkit-media-controls-start-playback-button {
-			  display: none !important;
+				opacity: 0;
 			}
 		}
 	}
