Add partner logos to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,10 @@
       <li class="link-list__item"><a href="{{site.baseurl}}/donate">Get Involved</a></li>
     </ul>
   </nav>
+  <img class="logo logo--gray logo--small" src="{{site.baseurl}}/assets/img/HOPE_logo-black.svg" alt="HOPE Leadership Academy Logo">
   <div class="logo-group">
-    <img class="logo -gray" src="{{site.baseurl}}/assets/img/HOPE_logo-black.svg" alt="HOPE Leadership Academy Logo">
+    <img class="logo logo--smaller logo--gray" src="{{site.baseurl}}/assets/img/connect_web_logo.png" alt="Connect Web Logo">
+    <img class="logo logo--smaller logo--gray" src="{{site.baseurl}}/assets/img/optimum_logo.png" alt="Optimum Logo">
   </div>
   <p class="sponsors">
     H.O.P.E. Leadership Academy is a proud partner of Optimist Clubs of Huntsville and Connect, a Leadership Huntsville/Madison County Program.
