Update promo content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <body>
 	<div class="promo">
 		<p class="promo__text">Be the ONE Campaign: ONE thousand people give ONE hundred dollars in ONE month. A little hope goes a long way.</p>
-		<a href="#" class="promo__cta">Help us meet our goal!</a>
+		<a href="https://hopeleadershipacademy.dntly.com/campaign/one-campaign#/" class="promo__cta">Help us meet our goal!</a>
 	</div>
   	{% include header.html %}
     {{ content }}
