Replace 'Get Involved' with 'Donate' throughout site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <li class="link-list__item"><a href="{{site.baseurl}}/">Home</a></li>
       <li class="link-list__item"><a href="{{site.baseurl}}/about">Our Mission</a></li>
       <li class="link-list__item"><a href="{{site.baseurl}}/program">Program Overview</a></li>
-      <li class="link-list__item"><a href="{{site.baseurl}}/donate">Get Involved</a></li>
+      <li class="link-list__item"><a href="{{site.baseurl}}/donate">Donate</a></li>
     </ul>
   </nav>
   <img class="logo logo--gray logo--small" src="{{site.baseurl}}/assets/img/HOPE_logo-black.svg" alt="HOPE Leadership Academy Logo">
