Update footer and promo components

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,11 @@
 <html>
   {% include head.html %}
   <body>
-	<div class="promo">
+	<div class="promo dark-green-bg">
 		<p class="promo__text">Be the ONE Campaign: ONE thousand people give ONE hundred dollars in ONE month. A little hope goes a long way.</p>
-		<a href="https://hopeleadershipacademy.dntly.com/campaign/one-campaign#/" class="promo__cta">Help us meet our goal!</a>
+		<a href="https://hopeleadershipacademy.dntly.com/campaign/one-campaign#/" class="button">
+      Donate!
+    </a>
 	</div>
   	{% include header.html %}
     {{ content }}
