--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,14 +7,13 @@
       <li class="link-list__item"><a href="{{site.baseurl}}/donate">Donate</a></li>
     </ul>
   </nav>
-  <img class="logo logo--gray logo--small" src="{{site.baseurl}}/assets/img/HOPE_logo-black.svg" alt="HOPE Leadership Academy Logo">
+  <h4>Sponsors & Donors</h4>
   <div class="logo-group">
     <img class="logo logo--smaller logo--gray" src="{{site.baseurl}}/assets/img/connect_web_logo.png" alt="Connect Web Logo">
     <img class="logo logo--smaller logo--gray" src="{{site.baseurl}}/assets/img/optimum_logo.png" alt="Optimum Logo">
   </div>
   <p class="sponsors">
     H.O.P.E. Leadership Academy is a proud partner of Optimist Clubs of Huntsville and Connect, a Leadership Huntsville/Madison County Program.
-    <br>
     <a href="https://docs.google.com/presentation/d/1ofPCDTosn0_jcB4fvNgAv6hjNzvExPOeXxlrnitGe2c/pub?start=false&loop=false&delayms=3000&slide=id.p" target="_blank">
       View all Sponsors & Donors
     </a>
