--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -201,8 +201,8 @@ input[type="submit"],
 	}
 
 	&--smaller{
-		max-width: 5em;
-		margin: 0 1.5em;
+		max-width: 2.5em;
+		margin: 0 .5em;
 	}
 }
 
