Rework header to utilize grid

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<header class="header" style="background-image: url('{{site.baseurl}}{{page.banner}}');">
+<header class="header">
   <div class="row">
-    <div class="header__content half column">
+    <div class="header__content third column">
       <a class="logo" href="{{site.baseurl}}/">
         <img src="{{site.baseurl}}/assets/img/HOPE_logo.svg" alt="HOPE Leadership Academy Logo">
       </a>
@@ -13,6 +13,8 @@
         </h1>
         <p>{{page.intro}}</p>
       </div>
+    </div>
+    <div class="two-thirds column banner--col" style="background-image: url('{{site.baseurl}}{{page.banner}}');">
     </div>
   </div>
 </header>
