--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,12 @@
 <html>
   {% include head.html %}
   <body>
-	<div class="promo dark-green-bg">
+	<!-- <div class="promo dark-green-bg">
 		<p class="promo__text">Be the ONE Campaign: ONE thousand people give ONE hundred dollars in ONE month. A little hope goes a long way.</p>
 		<a href="https://hopeleadershipacademy.dntly.com/campaign/one-campaign#/" class="button">
       Donate!
     </a>
-	</div>
+	</div> -->
   	{% include header.html %}
     {{ content }}
     {% include footer.html %}
