--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -28,7 +28,7 @@ Components
 
 	@include media-query($laptop){
 		>.container{
-			width: 100%;
+			width: 90%;
 			max-width: 15em;
 		}
 	}
@@ -36,6 +36,31 @@ Components
 
 .banner{
 	position: relative;
+
+	&--col{
+		display: none;
+
+		@include media-query($tablet){
+			display: block;
+			margin-top: 0;
+			background-size: cover;
+			background-position: center;
+			position: relative;
+		}
+
+		&:before{
+			display: block;
+			content: '';
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			height: 100%;
+			width: 15%;
+			background: linear-gradient(to right, $white, transparentize($white,1)); 
+		}
+	}
+
 	&:after,
 	&:before{
 		display: block;
