Add 'email us' link to footer component

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
       <li class="link-list__item"><a href="{{site.baseurl}}/about">Our Mission</a></li>
       <li class="link-list__item"><a href="{{site.baseurl}}/program">Program Overview</a></li>
       <li class="link-list__item"><a href="{{site.baseurl}}/donate">Donate</a></li>
+      <li class="link-list__item"><a href="mailto:contact@hopeleadershipacademy.org">Email Us</a></li>
     </ul>
   </nav>
   <h4>Sponsors & Donors</h4>
