Added emphasis to "sponsors and donors" in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,15 +8,16 @@
       <li class="link-list__item"><a href="mailto:contact@hopeleadershipacademy.org">Email Us</a></li>
     </ul>
   </nav>
-  <h4>Sponsors & Donors</h4>
   <div class="logo-group">
     <img class="logo logo--smaller logo--gray" src="{{site.baseurl}}/assets/img/connect_web_logo.png" alt="Connect Web Logo">
     <img class="logo logo--smaller logo--gray" src="{{site.baseurl}}/assets/img/optimum_logo.png" alt="Optimum Logo">
   </div>
   <p class="sponsors">
     H.O.P.E. Leadership Academy is a proud partner of Optimist Clubs of Huntsville and Connect, a Leadership Huntsville/Madison County Program.
-    <a href="https://docs.google.com/presentation/d/1ofPCDTosn0_jcB4fvNgAv6hjNzvExPOeXxlrnitGe2c/pub?start=false&loop=false&delayms=3000&slide=id.p" target="_blank">
-      View all Sponsors & Donors
+    <br><a href="https://docs.google.com/presentation/d/1ofPCDTosn0_jcB4fvNgAv6hjNzvExPOeXxlrnitGe2c/pub?start=false&loop=false&delayms=3000&slide=id.p" target="_blank">
+      <strong>
+        View all Sponsors & Donors
+      </strong>
     </a>
   </p>
   <p class="copyright">Copyright H.O.P.E. Leadership Academy 2015</p>
